force-app/main/default/objects/SVMXC__Page_Layout__c/SVMXC__Page_Layout__c.object-meta.xml
<CustomObject>
    <description>This object is to store information related to page layouts, it includes header &amp; detail page.</description>
    <label>Page Layout</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Layouts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>