force-app/main/default/objects/SVMXC__Page_Layout__c/fields/SVMXC__Enable_Attachments__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Enable_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Based on this flag, the iPad client will show the Attachments section for a record allowing the user to view, create or edit attachments</description>
    <inlineHelpText>Based on this flag, the iPad client will show the Attachments section for a record allowing the user to view, create or edit attachments</inlineHelpText>
    <label>Enable Attachments</label>
    <type>Checkbox</type>
</CustomField>