force-app/main/default/objects/SVMXC__Page_Layout__c/fields/SVMXC__Header_Page_Layout__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Header_Page_Layout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Header Page Layout</description>
    <inlineHelpText>Header Page Layout</inlineHelpText>
    <label>Header Page Layout</label>
    <referenceTo>SVMXC__Page_Layout__c</referenceTo>
    <relationshipLabel>Header Page Layout</relationshipLabel>
    <relationshipName>Page_Layouts</relationshipName>
    <type>Lookup</type>
</CustomField>