force-app/main/default/objects/SVMXC__Page_Layout__c/fields/SVMXC__Hide_Quick_Save__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Hide_Quick_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Quick Save</label>
    <type>Checkbox</type>
</CustomField>