force-app/main/default/objects/SVMXC__Page_Layout__c/fields/SVMXC__Multi_Add_Configuration__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Multi_Add_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Multi Add Configuration</label>
    <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>Page Layouts</relationshipLabel>
    <relationshipName>Page_Layouts</relationshipName>
    <type>Lookup</type>
</CustomField>