force-app/main/default/objects/SVMXC__Page_Layout__c/fields/SVMXC__Multi_Add_Search_Field__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Multi_Add_Search_Field__c</fullName>
    <label>Multi Add Search Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>