force-app/main/default/objects/SVMXC__Page_Layout__c/fields/SVMXC__Sequence__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>