force-app/main/default/objects/SVMXC__Page_Layout__c/fields/SVMXC__SM_Include_Field2__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Include_Field2__c</fullName>
    <label>Include Field2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>